deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata: { name: quectosoft-hr-service }
spec: { selector: { app: quectosoft-hr-api } }
